# sudoku-solver

./: README.md  sudoku-solver.cabal
src/: SudokuSolver.hs  TestSudokus.hs
