cabal-version:  2.2
name:           sudoku-solver
version:        0.1
build-type:     Simple

common common-all
  default-language: Haskell2010
  build-depends:
    base == 4.*

library
  import: common-all
  hs-source-dirs: src/
  exposed-modules: TestSudokus

executable main
  import: common-all
  hs-source-dirs: src
  main-is: SudokuSolver.hs
  other-modules: TestSudokus
  ghc-options:
    -main-is SudokuSolver